very small changes

--- a/numpy101.py.ipynb
+++ b/numpy101.py.ipynb
@@ -690,7 +690,7 @@
    "id": "fd36f975",
    "metadata": {},
    "source": [
-    "# Reading matrix form a file"
+    "# Reading matrix from a file"
    ]
   },
   {
